--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -414,3 +414,22 @@ button:disabled {
     opacity: 0.3;
 }
 
+/* 
+*===================================================================
+* Everything Cards
+*===================================================================
+ */
+/* Cards */
+.card {
+    border-radius: 8px;
+    background-color: #ffffff;
+    padding: 10px;
+    margin: 10px 0; 
+}
+.card-shadow {
+    box-shadow: 0px 8px 20px 0 rgba(0,0,0,0.2)
+}
+.card-shadow:hover {
+    box-shadow: 0px 8px 40px 0 rgba(0,0,0,0.3);
+}
+
