--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -433,3 +433,26 @@ button:disabled {
     box-shadow: 0px 8px 40px 0 rgba(0,0,0,0.3);
 }
 
+
+/* 
+*=================================================================
+* Everything Flex Things
+*=================================================================
+ */ 
+.flex {
+    display: flex;
+    flex-flow: column nowrap
+}
+.flex-h {
+    display: flex;
+    flex-flow: row wrap
+}
+.flex-v {
+    display: flex;
+    flex-flow: column;
+}
+.flex-item {
+    margin: 0 8px 8px 0;
+    flex: 1 1 45%
+}
+
