--- a/UI/assets/css/main.css
+++ b/UI/assets/css/main.css
@@ -56,14 +56,14 @@ nav {
     background-color: rgb(21, 116, 233);
     color: #f2f2f2;
 }
-/* .left-nav {
+.left-nav {
     float: left;
     display: block
 }
 .right-nav {
     float: right;
     display: block
-} */
+}
 
 /* Hide the link that should open and close the topnav on small screens */
 .topnav .icon {
@@ -356,7 +356,7 @@ a.btn {
     min-height: 35px;
     max-width: 100%;
     padding: 10px 20px;
-    margin: 5px 5px;
+    margin: 5px 5px 5px 0px;
     cursor: pointer;
     font-size: 16px;
     display: inline-block;
@@ -579,6 +579,27 @@ section {
 
 .transparent {
     background: rgba(238, 235, 235, 0.7) !important;
+}
+.item-title {
+    font-weight: 600;
+    margin-bottom: 0px;
+    cursor: pointer;
+}
+.item-description {
+    font-size: 13px;
+    padding: 2px 0;
+    font-weight: 50;
+}
+/* Badge */
+.price {
+    text-transform: uppercase;
+    font-weight: 600;
+    padding: 3px 5px;
+    font-size: 18px;
+    margin-top: 1px;
+    background-color: #ffbb44;
+    padding: 4px 10px;
+    border-radius: 25px
 }
 
 /* 
