--- a/UI/assets/css/main.css
+++ b/UI/assets/css/main.css
@@ -598,8 +598,13 @@ label {
 .count {
   background: #fff;
   color: rgb(69, 89, 179);
-  border-radius: 50% 50%;
-  padding: 2px 5px;
+  width: 25px;
+  height: 25px;
+  line-height: 25px;
+  border-radius: 50%;
+  display: inline-block;
+  text-align: center;
+  /* padding: 2px 8px; */
 }
 section {
   margin-top: 25px;
