--- a/UI/assets/css/main.css
+++ b/UI/assets/css/main.css
@@ -492,6 +492,15 @@ button:disabled {
   margin: 0 8px 8px 0;
   flex: 1 1 45%;
 }
+.food-item {
+  margin: 6px;
+  flex: 1 1 45%;
+  max-width: 50%;
+}
+.card > .food-menu > .food-item {
+  /* flex: 1 1 46.7%; */
+  /* max-width: 46.7%; */
+}
 
 /* food-menu */
 .food-menu {
@@ -499,9 +508,13 @@ button:disabled {
   flex-flow: row wrap;
 }
 .food-item {
-  margin: 0 8px 8px 0;
-  flex: 1 1 100%;
-  max-width: 30.6%;
+  margin: 6px 6px 6px 6px;
+  flex: 1 1 30.3%;
+  max-width: 30.9%;
+}
+.card > .food-menu > .food-item {
+  flex: 1 1 30%;
+  /* max-width: 30.985%; */
 }
 
 /* 
@@ -640,10 +653,15 @@ section {
 * Everything Media Query
 *===================================================================================
  */
-@media screen and (max-width: 1080px) {
+@media screen and (max-width: 1110px) {
   .food-item {
+    /* margin: 0 6px 8px 6px; */
     flex: 1 1 45%;
-    max-width: 48%;
+    max-width: 46.8%;
+  }
+  .card > .food-menu > .food-item {
+    flex: 1 1 45%;
+    /* max-width: 30.5%; */
   }
   .contain-50 {
     width: 80%;
@@ -653,7 +671,7 @@ section {
 }
 
 /* When the screen is less than 600 pixels wide, hide all links, except for the first one ("Home"). Show the link that contains should open and close the topnav (.icon) */
-@media screen and (max-width: 720px) {
+@media screen and (max-width: 750px) {
   .topnav a:not(:first-child),
   .dropdown .dropbtn {
     display: none;
@@ -665,6 +683,11 @@ section {
 
   .food-item {
     margin-right: 5px;
+    flex: 1 1 100%;
+    max-width: 100%;
+  }
+  .card > .food-menu > .food-item {
+    /* margin: 0 6px 8px 6px; */
     flex: 1 1 100%;
     max-width: 100%;
   }
