--- a/UI/assets/css/main.css
+++ b/UI/assets/css/main.css
@@ -684,6 +684,29 @@ section {
 .list-item:last-child {
   border-radius: 0px 0px 5px 5px;
 }
+.flash {
+  /* flex-flow: column; */
+  position: fixed;
+  display: flex;
+  width: 70%;
+  z-index: 10000;
+  transition: visibility 0s linear 0s, opacity 0.25s 0s, transform 0.5s;
+}
+.flash-success {
+  background-color: rgb(3, 197, 61);
+  color: white;
+}
+.flash-error {
+  background-color: rgb(243, 39, 39);
+  color: white;
+}
+
+.setup-page {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  line-height: 250px;
+}
 /* 
 *===================================================================================
 * Everything Media Query
