Add features for admins to manage order
- Add findByName method
- Update admins UI
- Update Food.model.js

[START #161697110]

--- a/server/UI/assets/css/main.css
+++ b/server/UI/assets/css/main.css
@@ -276,12 +276,14 @@ p {
   color: #dfab02;
 }
 .text-success,
+.text-completed,
 .text-Completed {
   color: rgb(3, 197, 61);
 }
 
 .text-rejected,
-.text-Rejected {
+.text-Rejected,
+.text-cancelled {
   color: rgb(240, 35, 35);
 }
 .text-red {
